Bug Fix with Stack Overflow & Refactoring (#13)

--- a/public/scss/ninja-forms-spn-addon-public.scss
+++ b/public/scss/ninja-forms-spn-addon-public.scss
@@ -2,10 +2,7 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+$flagsImagePath: '../../assets/images/intltelinput/';
+
 @import "../../node_modules/intl-tel-input/src/css/intlTelInput.scss";
-
-.iti__flag {background-image: url("../../node_modules/intl-tel-input/build/img/flags.png");}
-
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .iti__flag {background-image: url("../../node_modules/intl-tel-input/build/img/flags@2x.png");}
-}
